Styled the cards displaying the books and padding top for the static navbar to stop overlappiing with content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,10 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ body {
+   padding-top: 70px;
+   height: 100%;
+   margin: 0;
+   overflow-x: hidden;
+ }
